<resources>
    <string name="app_name">DigitalReceipts</string>
    <string name="button">Button</string>
    <string name="freq_contacted">Frequently Contacted</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">Camera</string>
    <string name="finance">Finance</string>
    <string name="receipts">Receipts</string>
    <string name="finance_test">This is the finance fragment screen</string>
    <string name="total_cost">$50</string>
    <string name="index_number">1</string>
    <string name="receipt_id">1003235</string>
    <string name="company_info">Sheng Shiong</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_number">Not a valid phone number</string>
</resources>
