<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/index_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/index_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <TextView
            android:id="@+id/company_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/receipt_id"
            android:paddingBottom="18dp"
            android:text="@string/company_info" />


        <TextView
            android:id="@+id/receipt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toStartOf="@+id/index_number"
            android:layout_toLeftOf="@+id/index_number"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/receipt_id"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/total_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_info"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/total_cost"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>